# tcp-sockets

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/include/: Client.hpp
Client/src/: Client.cpp  main.cpp
Common/: CMakeLists.txt  PacketData.h
Server/: CMakeLists.txt
Server/include/: Server.hpp
Server/src/: Server.cpp  main.cpp
